[package]
name = "tegmine-core"
description = "core module"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
tegmine-common = { path = "../tegmine-common" }

# Rust patterns
lazy_static = { workspace = true }
once_cell = { workspace = true }

# Algorithms  
md5 = { workspace = true }

# Asynchronous 
crossbeam-channel = { workspace = true }
futures = { workspace = true }


# Data structures
dashmap = { workspace = true }
either = { workspace = true }
keyed_priority_queue = { workspace = true }
linked-hash-map = { workspace = true }

# Date and time
chrono = { workspace = true }
chrono-tz = { workspace = true }

# Development tools 
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thread_local = { workspace = true }

# Encoding data
base58 = { workspace = true }

# Script Language
deno_core = { workspace = true }
rhai = { workspace = true }
# v8 = { workspace = true }

# Text processing  
bstr = { workspace = true }
fancy-regex = { workspace = true }
regex = { workspace = true }
smartstring = { workspace = true }

# Value formatting 
numtoa = { workspace = true }
uuid = { workspace = true }
